Changes since CEXP-1.4.beta ("Helvetia")
 2004/5/20:
 - New syntax: '< scriptfile' implemented
 - Implemented 'builtin' symbol tables. 'xsyms' can help generating
   a symbol table in C source form. (Similar support was added to
   the 'ldep' tool as well.
 - NOTE: THE INTERFACE DEFINED IN cexpHelp.h HAS SLIGHTLY CHANGED
   (help tables now need a 'module-specific' name qualifier). Thus,
   more than one table can be defined in a single file. It makes
   future 'directory' support easier.
 2004/3/5:
 - NOTE: THE INTERFACE TO cexpModuleInfo() (order of parameters)
         HAS CHANGED, SORRY.
 - Added support for m68k cache flushing (RTEMS only)
 - Help supporting GDB (in the future - not implemented yet) by
   keeping section address info. Using the 'gencore.c' utility
   (distributed separately - mail me), we can use GDB to analyze
   core dumps already, however. Added cexpModuleDumpGdbSectionInfo().
 - added verbosity level to cexpModuleInfo() [--> interface for
   that routine *changed* ]
 - small grammar bugfix: declaration of a new variable should
   only be executed if expression evaluation is not disabled
   (as a result of && ||). Impact is probably none as variable
   declarations are not allowed in such a context anyhow.
 - added a magic string to allow version checking of core files
   and binaries etc.

Changes since CEXP-1.3.beta ("good friday")

 2003/7/31:
 - added info about 'xsym' cross tool and updated configure
   magic to do real cross-builds for 'xsyms' (especially if
   using bfd. On a ELF host, it's OK to use a native libelf
   to build 'xsyms' for any ELF(32) target.
 - fixed BFD xsyms '.sym' extension handling.
 - added a architecture check to the BFD loader after getting
   obscure errors when trying to load x86 objects to a PPC
   system :-(
 - hacked libtecla so the 'newline' action passes nonprinting
   characters which ended the line along to the application.
   This can be used to implement 'hotkeys' (as used by the SVGM